# redoom

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: main.yml
.patches/: system_includes.diff
assets/debug-cubes/: debug-cubes.mtl
benchmarks/: CMakeLists.txt
benchmarks/src/: bm_Allocator.cpp  bm_ComponentManager.cpp  bm_allocator.cpp
examples/: CMakeLists.txt
examples/3d_scene/: CMakeLists.txt
examples/3d_scene/behaviours/: CMakeLists.txt
examples/3d_scene/behaviours/src/: ArrowsControlBehaviour.cpp  DonutBehaviour.cpp  FPSCounterBehaviour.cpp  KeyboardBehaviour.cpp  RotationBehaviour.cpp
examples/3d_scene/include/behaviours/: DonutBehaviour.hh  FPSCounterBehaviour.hh
examples/3d_scene/scenes/: default.redoom  default.yaml
examples/3d_scene/shaders/: fs.glslx  vs.glslx
examples/3d_scene/shaders/lit/: fs.glslx  vs.glslx
examples/3d_scene/shaders/unlit/: fs.glslx  vs.glslx
examples/3d_scene/src/: main.cpp
glsl/: fs.glslx  vs.glslx
include/redoom/: Application.hh  ComponentSerializer.hh  EntryPoint.hh  Layer.hh  Runtime.hh  Scene.hh  SceneSerializer.hh
include/redoom/ecs/: Behaviour.hh  Component.hh  ComponentBase.hh  ComponentManager.hh  Context.hh  Entity.hh  EntityManager.hh  Registry.hh  System.hh  SystemBase.hh  SystemManager.hh  UpdateContext.hh
include/redoom/ecs/behaviours/: CameraBehaviour.hh
include/redoom/ecs/components/: AmbientLightComponent.hh  BehaviourComponent.hh  BodyComponent.hh  CameraComponent.hh  DirectionalLightComponent.hh  MaterialComponent.hh  MeshComponent.hh  ModelComponent.hh  TransformComponent.hh
include/redoom/ecs/systems/: BehaviourSystem.hh  BodySystem.hh  CameraSystem.hh  EventSystem.hh  LightSystem.hh  MeshSystem.hh  ModelSystem.hh  MousePickingSystem.hh  PhysicsDebugSystem.hh  PhysicsWorldSystem.hh  RenderSystem.hh
include/redoom/events/: Event.hh  EventQueue.hh  Key.hh
include/redoom/graphics/: BoundUniform.hh  Buffer.hh  BufferLayout.hh  Camera.hh  FrameBuffer.hh  FrameBufferLibrary.hh  Material.hh  Mesh.hh  Model.hh  Program.hh  RenderBuffer.hh  Shader.hh  ShaderLibrary.hh  Texture.hh  TextureLibrary.hh  UnboundUniform.hh  UniformBase.hh  UniformTypeSetter.hh  UniformTypes.hh  Vertex.hh  VertexArray.hh
include/redoom/graphics/mesh/: Circle.hh  Cube.hh  Cuboid.hh  Quad.hh  Sphere.hh  Torus.hh
include/redoom/imgui/: FrameBufferImGuiWindow.hh  ImGuiWindow.hh  LogImGuiWindow.hh  PropertiesImGuiWindow.hh  SceneImGuiWindow.hh
include/redoom/layers/: ImGuiLayer.hh  RuntimeLayer.hh
include/redoom/memory/: Allocator.hh  AllocatorBase.hh  IAllocator.hh  ObjectPool.hh  Ptr.hh
include/redoom/physics/: AABB.hh  Body.hh  BoundingBox.hh  Fixture.hh  Force.hh  OctTree.hh  Shape.hh  World.hh
include/redoom/platform/: Platform.hh
include/redoom/renderer/: RenderPipeline.hh  Renderer.hh  RendererAPI.hh  RendererContext.hh  Window.hh
include/redoom/serializer/: ComponentFactory.hh  ComponentSerializer.hh  SceneSerializer.hh  common.hh
libs/: CMakeLists.txt
libs/behaviours/src/: CameraBehaviour.cpp
libs/components/: CMakeLists.txt
libs/components/include/components/: extern.hh
libs/components/src/: AmbientLightComponent.cpp  BehaviourComponent.cpp  BodyComponent.cpp  CameraComponent.cpp  DirectionalLightComponent.cpp  MaterialComponent.cpp  MeshComponent.cpp  ModelComponent.cpp  TransformComponent.cpp
libs/meshes/: CMakeLists.txt
libs/meshes/include/meshes/: extern.hh
libs/meshes/src/: Circle.cpp  Cube.cpp  Cuboid.cpp  Custom.cpp  Quad.cpp  Sphere.cpp  Torus.cpp
modules/Utils/: CMakeLists.txt
modules/Utils/include/Utils/: Concepts.hpp  DLLoader.hh  DynLibrary.hh  Error.hh  Expected.hh  Factory.hh  Serializer.hh  Singleton.hh  ThreadPool.hh  UniqueTypeId.hh  traits.hpp
modules/Utils/src/: UniqueTypeId.cpp
modules/Utils/tests/: CMakeLists.txt
modules/Utils/tests/src/: tests_ThreadPool.cpp  tests_traits.cpp
modules/Utils/tests/utils/mock/: traits.hpp
settings/: SerializationOrder.yaml  SystemsExecutionOrder.yaml
src/: Application.cpp  ComponentSerializer.cpp  Layer.cpp  Runtime.cpp  Scene.cpp  SceneSerializer.cpp  main.cpp
src/ecs/: Behaviour.cpp  ComponentBase.cpp  Context.cpp  Entity.cpp  EntityManager.cpp  Registry.cpp  System.cpp  SystemBase.cpp  SystemManager.cpp  UpdateContext.cpp
src/ecs/components/: BehaviourComponent.cpp
src/ecs/systems/: BehaviourSystem.cpp  BodySystem.cpp  CameraSystem.cpp  EventSystem.cpp  LightSystem.cpp  MeshSystem.cpp  ModelSystem.cpp  MousePickingSystem.cpp  PhysicsDebugSystem.cpp  PhysicsWorldSystem.cpp  RenderSystem.cpp
src/events/: EventQueue.cpp  Key.cpp
src/graphics/: BufferLayout.cpp  Camera.cpp  FrameBuffer.cpp  FrameBufferLibrary.cpp  Material.cpp  Mesh.cpp  Model.cpp  Program.cpp  Shader.cpp  ShaderLibrary.cpp  Texture.cpp  TextureLibrary.cpp  UniformBase.cpp  VertexArray.cpp
src/imgui/: FrameBufferImGuiWindow.cpp  ImGuiWindow.cpp  LogImGuiWindow.cpp  PropertiesImGuiWindow.cpp  SceneImGuiWindow.cpp
src/layers/: ImGuiLayer.cpp  RuntimeLayer.cpp
src/memory/: Allocator.cpp  AllocatorBase.cpp  IAllocator.cpp  ObjectPool.cpp
src/physics/: Body.cpp  BoundingBox.cpp  Fixture.cpp  Force.cpp  Shape.cpp  World.cpp
src/physics/collisions/: CollisionDetection.cpp  CollisionResolver.cpp
src/physics/shapes/: Cuboid.cpp  Sphere.cpp
src/platform/: Platform.cpp
src/platform/OpenGL/: OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLWindow.cpp
src/renderer/: Renderer.cpp  RendererAPI.cpp  RendererContext.cpp  Window.cpp
src/renderer/pipelines/: DefaultRenderPipeline.cpp
src/serializer/: common.cpp
tests/: .clang-tidy  CMakeLists.txt
tests/src/: main.cpp  tests_AABB.cpp  tests_Allocator.cpp  tests_Body.cpp  tests_Component.cpp  tests_ComponentManager.cpp  tests_Entity.cpp  tests_EntityManager.cpp  tests_OctTree.cpp  tests_Registry.cpp  tests_SystemManager.cpp  tests_World.cpp
tests/utils/mock/: OctTree.hh  Window.cpp  Window.hh  components.hh  systems.cpp  systems.hh
tests/utils/stringmakers/: glm.hpp  physics.hpp  stringmakers.hpp
(+21 files in other folders)
